Add SUBD Proposals to the Portal
* Move all proposals into their own folder
* Add new fields to application submission
* Add new info banner component

--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -84,6 +84,13 @@
         [showErrors]="showValidationErrors"
         (navigateToStep)="onBeforeSwitchStep($event)"
       ></app-tur-proposal>
+      <app-subd-proposal
+        *ngIf="application.typeCode === 'SUBD'"
+        [$application]="$application"
+        [$applicationDocuments]="$applicationDocuments"
+        [showErrors]="showValidationErrors"
+        (navigateToStep)="onBeforeSwitchStep($event)"
+      ></app-subd-proposal>
     </div>
   </cdk-step>
   <cdk-step label="Upload Attachments">
