--- a/portal-frontend/src/app/features/edit-application/proposal/tur-proposal/tur-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-application/proposal/tur-proposal/tur-proposal.component.html
@@ -18,7 +18,7 @@
       </a>
     </li>
     <li>
-      <a href="TODO" target="_blank">FIX THIS ELEPHANT: Transportation, Utility and Recreational Trail</a>
+      <a href="TODO" target="_blank">FIXME: Transportation, Utility and Recreational Trail</a>
     </li>
   </ul>
 </app-warning-banner>
