--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -1,11 +1,26 @@
 <ng-template #header>
   <div class="header">
     <h6 *ngIf="application">Application ID: {{ application.fileNumber }} | {{ application.type }}</h6>
-    <div class="change-app-type-btn-wrapper">
-      <button mat-flat-button color="accent" (click)="onApplicationTypeChangeClicked()">Change Application Type</button>
-      <mat-icon color="accent" matTooltip="Changing application type will remove some inputs from your saved progress">
-        help_outline
-      </mat-icon>
+    <div class="header-btn-wrapper">
+      <button
+        *ngIf="application?.fileNumber && cdkStepper.selectedIndex === editAppSteps.ReviewAndSubmit"
+        mat-flat-button
+        color="primary"
+        (click)="onDownloadPdf(application?.fileNumber)"
+      >
+        Download PDF
+      </button>
+      <div class="change-app-type-btn-wrapper">
+        <button mat-flat-button color="accent" (click)="onApplicationTypeChangeClicked()">
+          Change Application Type
+        </button>
+        <mat-icon
+          color="accent"
+          matTooltip="Changing application type will remove some inputs from your saved progress"
+        >
+          help_outline
+        </mat-icon>
+      </div>
     </div>
   </div>
 </ng-template>
