Add Subdivision to the Applicant Info Page

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
@@ -130,6 +130,11 @@
     [application]="submittedApplication"
     [files]="files"
   ></app-tur-details>
+  <app-subd-details
+    *ngIf="submittedApplication && applicationType === 'SUBD'"
+    [applicationSubmission]="submittedApplication"
+    [files]="files"
+  ></app-subd-details>
 </section>
 <section>
   <h3>Optional Documents</h3>
