--- a/portal-frontend/src/app/features/home/home.component.html
+++ b/portal-frontend/src/app/features/home/home.component.html
@@ -8,7 +8,7 @@
     </diV>
     <p>Create and manage your Applications, Notice of Intent, and Notification of SRW.</p>
     <div class="learn-more-wrapper">
-      <div class="learn-more-ctr" color="accent" (click)="onLearnMoreClick()">
+      <div class="learn-more-ctr button-text" color="accent" (click)="onLearnMoreClick()">
         Learn more<mat-icon>{{ isLearnMoreOpen ? 'expand_less' : 'expand_more' }}</mat-icon>
       </div>
       <div *ngIf="isLearnMoreOpen">
