Copy alcs toast styling to portal

--- a/portal-frontend/src/styles.scss
+++ b/portal-frontend/src/styles.scss
@@ -6,6 +6,7 @@
 @use 'styles/form-controls';
 @use 'styles/dialog';
 @use 'styles/functions' as *;
+@use 'styles/toast';
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
