Disable drag drop when sortable is disabled

--- a/alcs-frontend/src/app/shared/application-document/application-document.component.html
+++ b/alcs-frontend/src/app/shared/application-document/application-document.component.html
@@ -6,6 +6,7 @@
 
 <table
   cdkDropList
+  [cdkDropListDisabled]='!sortable'
   (cdkDropListDropped)="onRowDropped($event)"
   mat-table
   [dataSource]="dataSource"
