--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.html
@@ -64,7 +64,7 @@
       <div class="subheading2">Email</div>
       <div class="subheading2">Corporate Summary</div>
       <ng-container *ngFor="let owner of parcel.owners">
-        <div>{{ owner.type }}</div>
+        <div>{{ owner.type.label }}</div>
         <div>{{ owner.displayName }}</div>
         <div>{{ owner.phoneNumber }}</div>
         <div>{{ owner.email }}</div>
