Fix subtask assignee fields from cutting name short on focus

--- a/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.scss
+++ b/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.scss
@@ -60,6 +60,6 @@
 
 :host::ng-deep .ng-select .ng-select-container {
   .ng-value-container .ng-input > input {
-    margin-bottom: 0;
+    margin: 0;
   }
 }
