Require reasonText when reason is custom on Info Requests

--- a/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.html
@@ -60,6 +60,7 @@
               #customReasonText
               matInput
               type="text"
+              [required]='model.reason === REASON_TYPE.CUSTOM'
               [(ngModel)]="model.reasonText"
               name="reasonText"
               (click)="onReasonInputClick()"
