fix notifications on assignee and fix styling

--- a/alcs-frontend/src/app/shared/header/notifications/notifications.component.scss
+++ b/alcs-frontend/src/app/shared/header/notifications/notifications.component.scss
@@ -55,6 +55,7 @@
   flex-direction: column;
   border-radius: 0;
   white-space: initial;
+  align-items: flex-start;
 
   div {
     text-align: left;
