--- a/alcs-frontend/src/app/features/application/review/review.component.html
+++ b/alcs-frontend/src/app/features/application/review/review.component.html
@@ -14,6 +14,6 @@
     [fileNumber]="fileNumber"
     [visibilityFlags]="['C']"
     [sortable]="true"
-    title="Evidentiary Record"
+    tableTitle="Evidentiary Record"
   ></app-document>
 </section>
