--- a/alcs-frontend/src/app/features/commissioner/commissioner.component.html
+++ b/alcs-frontend/src/app/features/commissioner/commissioner.component.html
@@ -6,7 +6,7 @@
         *ngIf="fileNumber"
         [fileNumber]="fileNumber"
         [visibilityFlags]="['C']"
-        title="Evidentiary Record"
+        tableTitle="Evidentiary Record"
       ></app-document>
     </section>
   </div>
