--- a/portal-frontend/src/styles/colors.scss
+++ b/portal-frontend/src/styles/colors.scss
@@ -22,4 +22,4 @@ $grey-light: #efefef;
 $link-color: #1a5a96;
 $error-color: #d8292f;
 $success-color: #2e8540;
-$warning-color: #cc8b18;
+$warning-color: #fcba19;
