--- a/portal-frontend/src/styles/toast.scss
+++ b/portal-frontend/src/styles/toast.scss
@@ -1,7 +1,13 @@
 @use './colors';
+@use './functions' as *;
 
 .mat-mdc-snack-bar-container {
   padding: 0 !important;
+  transform: translateY(100%) !important;
+
+  @media screen and (min-width: $desktopBreakpoint) {
+    transform: translate(-20%, 100%) !important;
+  }
 
   .mat-mdc-simple-snackbar {
     align-items: stretch;
