--- a/portal-frontend/src/app/features/view-application/view-application.component.scss
+++ b/portal-frontend/src/app/features/view-application/view-application.component.scss
@@ -99,15 +99,27 @@
   height: rem(56);
   z-index: 2;
 
+  button {
+    width: 100%;
+    height: 100%;
+    text-align: right !important;
+    display: flex;
+    justify-content: flex-end;
+    padding: rem(8) rem(24);
+
+    @media screen and (min-width: $tabletBreakpoint) {
+      padding: rem(12) rem(36);
+    }
+
+    @media screen and (min-width: $desktopBreakpoint) {
+      padding: rem(18) rem(80);
+    }
+  }
+
   div {
     display: flex;
     align-items: center;
     justify-content: center;
-
-    button {
-      width: 100%;
-      height: 100%;
-    }
 
     .mat-icon {
       margin-left: rem(6);
