Update alcs toast to match portal toast excluding position

--- a/alcs-frontend/src/styles/colors.scss
+++ b/alcs-frontend/src/styles/colors.scss
@@ -21,7 +21,7 @@ $bg-color: #f5f7e7;
 
 $error-color: #d8292f;
 $success-color: #2e8540;
-$warning-color: #cc8b18;
+$warning-color: #fcba19;
 
 $dark-contrast-text: #000000;
 $light-contrast-text: $white;
