--- a/portal-frontend/src/app/features/view-submission/view-submission.component.scss
+++ b/portal-frontend/src/app/features/view-submission/view-submission.component.scss
@@ -68,8 +68,8 @@
 
 .buttons {
   display: flex;
-  justify-content: space-between;
   flex-direction: column-reverse;
+  justify-content: center;
 
   button {
     width: 100%;
@@ -78,6 +78,14 @@
 
   @media screen and (min-width: $tabletBreakpoint) {
     flex-direction: row;
+
+    div {
+      margin-right: rem(16);
+    }
+
+    div:last-child {
+      margin-right: 0 !important;
+    }
   }
 }
 
@@ -99,15 +107,27 @@
   height: rem(56);
   z-index: 2;
 
+  button {
+    width: 100%;
+    height: 100%;
+    text-align: right !important;
+    display: flex;
+    justify-content: flex-end;
+    padding: rem(8) rem(24);
+
+    @media screen and (min-width: $tabletBreakpoint) {
+      padding: rem(12) rem(36);
+    }
+
+    @media screen and (min-width: $desktopBreakpoint) {
+      padding: rem(18) rem(80);
+    }
+  }
+
   div {
     display: flex;
     align-items: center;
     justify-content: center;
-
-    button {
-      width: 100%;
-      height: 100%;
-    }
 
     .mat-icon {
       margin-left: rem(6);
