--- a/portal-frontend/src/app/features/edit-submission/edit-submission.component.html
+++ b/portal-frontend/src/app/features/edit-submission/edit-submission.component.html
@@ -35,7 +35,7 @@
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.AppParcel">
       <app-parcel-details
-        [$application]="$application"
+        [$applicationSubmission]="$applicationSubmission"
         [showErrors]="showValidationErrors"
         (navigateToStep)="onBeforeSwitchStep($event)"
         (componentInitialized)="onParcelDetailsInitialized()"
@@ -47,7 +47,7 @@
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.OtherParcel">
       <app-other-parcels
         [showErrors]="showValidationErrors"
-        [$application]="$application"
+        [$applicationSubmission]="$applicationSubmission"
         (navigateToStep)="onBeforeSwitchStep($event)"
       ></app-other-parcels>
     </div>
@@ -57,7 +57,7 @@
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.PrimaryContact">
       <app-primary-contact
         [showErrors]="showValidationErrors"
-        [$application]="$application"
+        [$application]="$applicationSubmission"
         [$applicationDocuments]="$applicationDocuments"
         (navigateToStep)="onBeforeSwitchStep($event)"
       ></app-primary-contact>
@@ -68,7 +68,7 @@
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.Government">
       <app-select-government
         [showErrors]="showValidationErrors"
-        [$application]="$application"
+        [$applicationSubmission]="$applicationSubmission"
         (navigateToStep)="onBeforeSwitchStep($event)"
       ></app-select-government>
     </div>
@@ -77,7 +77,7 @@
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.LandUse">
       <app-land-use
-        [$application]="$application"
+        [$applicationSubmission]="$applicationSubmission"
         [showErrors]="showValidationErrors"
         (navigateToStep)="onBeforeSwitchStep($event)"
       ></app-land-use>
@@ -88,20 +88,20 @@
     <div *ngIf="application && cdkStepper.selectedIndex === editAppSteps.Proposal">
       <app-nfu-proposal
         *ngIf="application.typeCode === 'NFUP'"
-        [$application]="$application"
+        [$applicationSubmission]="$applicationSubmission"
         [showErrors]="showValidationErrors"
         (navigateToStep)="onBeforeSwitchStep($event)"
       ></app-nfu-proposal>
       <app-tur-proposal
         *ngIf="application.typeCode === 'TURP'"
-        [$application]="$application"
+        [$applicationSubmission]="$applicationSubmission"
         [$applicationDocuments]="$applicationDocuments"
         [showErrors]="showValidationErrors"
         (navigateToStep)="onBeforeSwitchStep($event)"
       ></app-tur-proposal>
       <app-subd-proposal
         *ngIf="application.typeCode === 'SUBD'"
-        [$applicationSubmission]="$application"
+        [$applicationSubmission]="$applicationSubmission"
         [$applicationDocuments]="$applicationDocuments"
         [showErrors]="showValidationErrors"
         (navigateToStep)="onBeforeSwitchStep($event)"
@@ -112,7 +112,7 @@
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.Attachments">
       <app-other-attachments
-        [$application]="$application"
+        [$applicationSubmission]="$applicationSubmission"
         [$applicationDocuments]="$applicationDocuments"
         [showErrors]="showValidationErrors"
         (navigateToStep)="onBeforeSwitchStep($event)"
@@ -123,7 +123,7 @@
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.ReviewAndSubmit">
       <app-review-and-submit
-        [$application]="$application"
+        [$applicationSubmission]="$applicationSubmission"
         [$applicationDocuments]="$applicationDocuments"
       ></app-review-and-submit>
     </div>
