--- a/portal-frontend/src/app/features/edit-submission/other-parcels/other-parcels.component.html
+++ b/portal-frontend/src/app/features/edit-submission/other-parcels/other-parcels.component.html
@@ -71,6 +71,7 @@
           [parcel]="parcel"
           [$owners]="$owners"
           [fileId]="fileId"
+          [submissionUuid]='submissionUuid'
           [enableOwners]="true"
           [enableCertificateOfTitleUpload]="false"
           [enableUserSignOff]="false"
