--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-details.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-details.component.html
@@ -19,6 +19,7 @@
       [parcel]="parcel"
       [$owners]="$owners"
       [fileId]="fileId"
+      [submissionUuid]='submissionUuid'
       [showErrors]='showErrors'
       (onFormGroupChange)="onParcelFormChange($event)"
       (onOwnersUpdated)="onOwnersUpdated()"
