--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
@@ -227,6 +227,7 @@
       <div>
         <app-parcel-owners
           [fileId]="fileId"
+          [submissionUuid]='submissionUuid'
           [parcelUuid]="parcel.uuid"
           [owners]="parcel.owners"
           (onOwnersUpdated)="onOwnersUpdated.emit()"
@@ -303,6 +304,7 @@
       <div>
         <app-parcel-owners
           [fileId]="fileId"
+          [submissionUuid]='submissionUuid'
           [parcelUuid]="parcel.uuid"
           [owners]="parcel.owners"
           (onOwnersUpdated)="onOwnersUpdated.emit()"
