--- a/portal-frontend/src/app/features/edit-submission/review-and-submit/review-and-submit.component.html
+++ b/portal-frontend/src/app/features/edit-submission/review-and-submit/review-and-submit.component.html
@@ -1,14 +1,14 @@
 <section>
   <app-application-details
-    [$application]="$application"
+    [$application]="$applicationSubmission"
     [$applicationDocuments]="$applicationDocuments"
   ></app-application-details>
   <div class="button-container">
     <button
-      *ngIf="application?.fileNumber"
+      *ngIf="applicationSubmission?.fileNumber"
       mat-flat-button
       color="primary"
-      (click)="onDownloadPdf(application?.fileNumber)"
+      (click)="onDownloadPdf(applicationSubmission?.fileNumber)"
     >
       Download PDF
     </button>
