--- a/portal-frontend/src/app/features/edit-submission/parcel-details/application-owners-dialog/application-owners-dialog.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/application-owners-dialog/application-owners-dialog.component.html
@@ -3,7 +3,7 @@
 </div>
 <div mat-dialog-content>
   <div>
-    <app-parcel-owners (onOwnersUpdated)='onUpdated()' [owners]="owners" [fileId]="fileId"></app-parcel-owners>
+    <app-parcel-owners (onOwnersUpdated)='onUpdated()' [submissionUuid]='submissionUuid' [owners]="owners" [fileId]="fileId"></app-parcel-owners>
   </div>
 </div>
 <div mat-dialog-actions>
