Create new Module for ALCS Edit
* Create new front end and back end modules for ALCS Edit Feature
* Clean up existing edit module to export and create base step component to DRY things up

WIP

--- a/portal-frontend/src/app/app.component.html
+++ b/portal-frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div class='site-layout'>
-  <app-header></app-header>
-  <div id="appBody" class='main-content'>
+<div class="site-layout">
+  <app-header *ngIf="showHeaderFooter"></app-header>
+  <div id="appBody" class="main-content">
     <router-outlet></router-outlet>
   </div>
-  <app-footer id="appFooter"></app-footer>
+  <app-footer *ngIf="showHeaderFooter" id="appFooter"></app-footer>
 </div>
