--- a/portal-frontend/src/app/features/edit-submission/proposal/nfu-proposal/nfu-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/nfu-proposal/nfu-proposal.component.html
@@ -8,7 +8,10 @@
 </div>
 <app-warning-banner>
   Please consult the '
-  <a href="https://www.alc.gov.bc.ca/application-and-notice-process/applications/what-the-commission-considers/" target="_blank">
+  <a
+    href="https://www.alc.gov.bc.ca/application-and-notice-process/applications/what-the-commission-considers/"
+    target="_blank"
+  >
     What the Commission Considers
   </a>
   ' page of the ALC website for more information.
@@ -251,6 +254,23 @@
     </div>
     <div class="form-row">
       <div>
+        <label for="projectDurationUnit">Duration</label>
+        <mat-form-field appearance="outline">
+          <mat-select placeholder="Select one" id="projectDurationUnit" formControlName="projectDurationUnit">
+            <mat-option value="days">Days</mat-option>
+            <mat-option value="months">Months</mat-option>
+            <mat-option value="years">Years</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <div
+          *ngIf="projectDurationUnit.invalid && (projectDurationUnit.dirty || projectDurationUnit.touched)"
+          class="field-error"
+        >
+          <mat-icon>warning</mat-icon>
+          <div *ngIf="projectDurationUnit.errors?.['required']">This field is required</div>
+        </div>
+      </div>
+      <div>
         <label for="projectDurationAmount">Length</label>
         <mat-form-field appearance="outline">
           <input
@@ -270,23 +290,6 @@
         >
           <mat-icon>warning</mat-icon>
           <div *ngIf="projectDurationAmount.errors?.['required']">This field is required</div>
-        </div>
-      </div>
-      <div>
-        <label for="projectDurationUnit">Unit</label>
-        <mat-form-field appearance="outline">
-          <mat-select placeholder="Select one" id="projectDurationUnit" formControlName="projectDurationUnit">
-            <mat-option value="days">Days</mat-option>
-            <mat-option value="months">Months</mat-option>
-            <mat-option value="years">Years</mat-option>
-          </mat-select>
-        </mat-form-field>
-        <div
-          *ngIf="projectDurationUnit.invalid && (projectDurationUnit.dirty || projectDurationUnit.touched)"
-          class="field-error"
-        >
-          <mat-icon>warning</mat-icon>
-          <div *ngIf="projectDurationUnit.errors?.['required']">This field is required</div>
         </div>
       </div>
     </div>
