--- a/portal-frontend/src/app/features/edit-submission/proposal/tur-proposal/tur-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/tur-proposal/tur-proposal.component.html
@@ -123,6 +123,7 @@
           matInput
           placeholder="Type total area"
         />
+        <span *ngIf="totalCorridorArea.value" matTextSuffix>ha</span>
       </mat-form-field>
       <div
         *ngIf="totalCorridorArea.invalid && (totalCorridorArea.dirty || totalCorridorArea.touched)"
